--- a/CSS/cars-update.css
+++ b/CSS/cars-update.css
@@ -1,3 +1,42 @@
+/* swiper */
+#cars .swiper-container {
+    width: 100%;
+    height: 70vh;
+  }
+  
+#cars .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+  
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  
+  
+  @media screen and (max-width:450px){
+    #cars .swiper-container {
+      height: 75vh;
+    }
+  }
+
+
+.car-one{
+    display: flex;
+    align-items: center;
+    width: 75%;
+    justify-content: space-between;
+}
 .car-one .car-image{
     width: 70%;
     display: flex;
@@ -42,12 +81,6 @@
     padding: 0 15px;
 }
 
-.car-one{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* transition: .5s ease-in-out 0s; */
-}
 
 
 
@@ -273,6 +306,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        width: unset;
         /* transition: .5s ease-in-out 0s; */
     }
 
