--- a/CSS/app.css
+++ b/CSS/app.css
@@ -15,6 +15,7 @@
 @import './joinus.css';
 @import './modal.css';
 @import './navbar.css';
+@import './podcast.css';
 @import './shop.css';
 @import './social.css';
 @import './sponsor-update.css';
