--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,20 +1,90 @@
 #home{
     height: 100vh;
-    display: flex;
+    /* display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    top: 0;
-    background-image: url(../IMAGES/HOME/Asset\ 4.webp);
+    top: 0; */
+    /* background-image: url(../IMAGES/HOME/Asset\ 4.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center center;  
+    background-position: center center;   */
     /* background-size: auto; */
-    -webkit-background-size: cover;
+    /* -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: cover; */
+    /* background-position: center center; */
+    /* background-attachment: fixed!important; */
+}
+
+#home .swiper-slide{
+    height: 100vh;
+    /* background-image: url(../IMAGES/HOME/Asset\ 4.webp)!important; */
+    background-size: cover!important;
+    background-repeat: no-repeat!important;
+    /* background-attachment: fixed!important; */
+    /* background-position: center center;   */
+    /* background-size: auto; */
+    -webkit-background-size: cover!important;
+    -moz-background-size: cover!important;
+    -o-background-size: cover!important;
+    background-size: cover!important;
+    /* background-position: center center!important; */
+}
+
+.banner-1{
+    background-image: url(../IMAGES/HOME/Asset\ 4.webp)!important;
+    background-attachment: fixed!important;
+}
+
+.banner-2{
+    background-image: url(../IMAGES/HOME/banner\ 2.webp)!important;
+    /* background-attachment: fixed!important; */
+}
+
+.banner-3{
+    background-image: url(../IMAGES/HOME/banner\ 3.webp)!important;
+    /* background-attachment: fixed!important; */
+}
+
+.banner-4{
+    background-image: url(../IMAGES/HOME/banner\ 4.webp)!important;
+    /* background-attachment: fixed!important; */
+}
+
+
+
+
+#home .swiper-container {
+    width: 100%;
+    height: 100%;
+
+  }
+
+#home .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+.mob{
+    display: none;
 }
 
 
@@ -30,8 +100,87 @@
     
 }
 
+
+.shop-banner-button{
+    position: absolute;
+    bottom: 20%;
+    left: 15%;
+}
+
+.podcast-banner-button{
+    position: absolute;
+    bottom: 25%;
+    right: 20%;
+}
+
+.youtube-banner-button{
+    position: absolute;
+    bottom: 10%;
+    /* right: 20%; */
+}
+
+
+.shop-banner-button, .podcast-banner-button, .youtube-banner-button{
+    
+
+    /* margin: 40px 25px 0 0; */
+    padding: 15px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    background-color: #1abc9c; 
+    color: #fff; 
+    font-size: 18px; 
+    outline: none; 
+    cursor: pointer; 
+
+    /* We need this to position 
+        span inside button */ 
+    /* position: relative;  */
+    overflow: hidden; 
+    box-shadow: 6px 7px 40px -4px  
+             rgba(0, 0, 0, 0.2); 
+    text-decoration: none;
+}
+
+
+
+
 @media screen and (max-width: 550px){
-    #home{
-        background-image: url(../IMAGES/HOME/Asset\ 2.webp);
+    .banner-1{
+        background-image: url(../IMAGES/HOME/Asset\ 2.webp)!important;
     }
+
+    .banner-2{
+        background-image: url(../IMAGES/HOME/mob-banner.webp)!important;
+    }
+
+    .banner-3{
+        background-image: url(../IMAGES/HOME/mob-banner-3.webp)!important;
+    }
+
+    .banner-4{
+        background-image: url(../IMAGES/HOME/mob-banner-4.webp)!important;
+    }
+
+
+    .shop-banner-button{
+        position: absolute;
+        bottom: 10%;
+        left: unset;
+    }
+    
+    .podcast-banner-button{
+        position: absolute;
+        bottom: 10%;
+        right: unset;
+    }
+
+    .youtube-banner-button{
+        position: absolute;
+        bottom: 10%;
+        right: unset;
+    }
+    
+    
+
 }
