--- a/CSS/home.css
+++ b/CSS/home.css
@@ -21,6 +21,8 @@
 
 #home .swiper-slide{
     height: 100vh;
+    width: 100vw!important;
+    /* max-width: 100vw!important; */
     /* background-image: url(../IMAGES/HOME/Asset\ 4.webp)!important; */
     background-size: cover!important;
     background-repeat: no-repeat!important;
@@ -31,23 +33,25 @@
     -moz-background-size: cover!important;
     -o-background-size: cover!important;
     background-size: cover!important;
-    /* background-position: center center!important; */
+   /* background-position: center center!important; */
 }
 
 .banner-1{
     background-image: url(../IMAGES/HOME/Asset\ 4.webp)!important;
-    background-attachment: fixed!important;
+    /* background-attachment: fixed!important; */
 }
 
 .banner-2{
     background-image: url(../IMAGES/HOME/banner\ 2.webp)!important;
     /* background-attachment: fixed!important; */
+
 }
 
 .banner-3{
     background-image: url(../IMAGES/HOME/banner\ 3.webp)!important;
     /* background-attachment: fixed!important; */
 }
+
 
 .banner-4{
     background-image: url(../IMAGES/HOME/banner\ 4.webp)!important;
