--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -324,7 +324,7 @@
         display: block;
         /* updates on 21/03/21 */
         position: relative;
-        color: #FFF;
+        /* color: #FFF; */
         font-family: "Ek Mukta", sans-serif;
         font-weight: 100;
         text-decoration: none;
