--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -325,7 +325,7 @@
         /* updates on 21/03/21 */
         position: relative;
         /* color: #FFF; */
-        /* font-family: "Ek Mukta", sans-serif; */
+        font-family: "Ek Mukta", sans-serif;
         font-weight: 100;
         text-decoration: none;
         /* font-size: 22px; */
@@ -345,6 +345,7 @@
     .dropbtn{
         font-size: 14px;
         padding: 16px 0;
+        font-family: "Ek Mukta", sans-serif;
     }
 }
 
