--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -180,6 +180,11 @@
     z-index: 98!important;
 }
 
+.four-nav{
+    z-index: 97!important;
+}
+
+
 .unset-values a{
     color: #000!important;
     font-size: .6em!important;
