--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,239 +1,167 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 *{
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
+    
 }
 
 body{
+    font-family: 'Montserrat', sans-serif; 
+    color: rgb(23, 63, 53);
+    transition: .3s ease 0s;
+    /* overflow-x: hidden!important; */
     overflow-x: hidden;
-    font-family: 'Roboto', sans-serif;
+    overflow-y: scroll;
+
+
+      -webkit-user-select: none;
+         -moz-user-select: -moz-none;
+          -ms-user-select: none;
+              user-select: none;
+  
+}
+
+#home{
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    text-align: left;
+}
+
+.text{
+    width: 100%;
+    padding: 0 0 0 20%;
+    text-align: left;
+}
+
+.container p1{
+     font-size: 75px;
+    line-height: 1.5em;
+    padding: 10px 0;
+
+}
+
+.container p2{
+    font-size: 40px;
+    line-height: 1.5em;
+
+}
+
+
+
+.container p{
+    font-size: 30px;
+   line-height: 1.5em;
+   margin: 10px 0;
+   padding: 10px 0;
+
+}
+
+.txt-type{
+    margin: 20px auto;
+    padding: 20px 0;
+}
+
+#home .swiper-container {
+    width: 50%;
+    padding: 50px 0;
+    margin: 0 20px;
+}
+
+#home .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+
+}
+
+
+@media screen and (max-width:807px){
+    
+
+.container p1{
+     font-size: 65px;
+ 
+}
+
+.container p2{
+    font-size: 30px;
+
+
+}
+
+.container p{
+    font-size: 20px;
+  
+
+}
+
+}
+
+
+@media screen and (max-width:609px){
+    
+
+    .container p1{
+         font-size: 60px;
+     
+    }
+    
+    .container p2{
+        font-size: 25px;
+    
+    
+    }
+    
+}
+
+
+@media screen and (max-width:511px){
+
+    #home{
+        margin-top: 15vh;
+        flex-wrap: wrap;
+        margin-bottom: 5vh;
+    }
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        text-align: unset;
+    }
+    
+    .text{
+        width: 100%;
+        margin: 0 0 0 0;
+        padding: 0 0 0 10%;
+        text-align: unset;
+    }
+
+    #home .swiper-container {
+        width: 100%;
+        padding: 0px 0 50px 0;
+        margin: 0 0px;
+    }
+    
+
 }
 
 
 
 .navbar{
-    /* height: 10vh; */
-    position: fixed;
-    width: 100%;
-    background-color: #0f0f0f;
-    z-index: 99;
-}
-
-.navbar ul{
-
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 30px 40px;
-}
-.navbar ul li{
-    list-style: none;
-    padding: 0 20px;
-}
-
-.navbar ul li a{
-    font-size: 20px;
-    color: #fff;
-    text-decoration: none;
-    
-}
-
-#blog{
-    /* height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column; */
-    /* background-image: url(../IMAGES/2472848.svg); 
-    background-repeat: no-repeat;
-    background-size: cover; */
-}
-
-p{
-    text-align: center;
-    font-size: 40px;
-    width: 80%;
-}
-
-
-
-.intro{
-    height: 90vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* background-image: url(../IMAGES/panther.jpg);
-    background-size: cover; */
-}
-
-.one{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-}
-
-.two{
-    display: flex;
-    flex-direction: column;
-    /* align-items: center;
-    justify-content: center; */
-    width: 50%;
-}
-
-.two p{
-    text-align: left;
-    font-weight: 500;
-    font-size: 45px;
-    color: #dddddd;
-
-}
-
-.panther{
-    /* margin-top: 100px; */
-    height: 650px;
-}
-
-.title{
-    height: 120px;
-}
-
-.button{
-    margin: 40px 0px 0 0;
-    padding: 15px 20px; 
-    border: none; 
-    border-radius: 5px; 
-    background-color: #1abc9c; 
-    color: #fff; 
-    font-size: 18px; 
-    outline: none; 
-    cursor: pointer; 
-
-    /* We need this to position 
-        span inside button */ 
-    position: relative; 
-    overflow: hidden; 
-    box-shadow: 6px 7px 40px -4px  
-             rgba(0, 0, 0, 0.2); 
-}
-
-
-
-@keyframes fade-in-left {
-    0%      { transform: translate(-25%,0); opacity:0; }
-    100%    { transform: translate(0,0);   opacity:1; }
-  }
-  .transitionSlideIn {
-    opacity: 1;
-    animation: fade-in-left 1s 1;
-  }
-
-
-  @keyframes fade-in-right {
-    0%      { transform: translate(25%,0); opacity:0; }
-    100%    { transform: translate(0,0);   opacity:1; }
-  }
-  .transitionSlideInright {
-    opacity: 1;
-    animation: fade-in-right 1s 1;
-  }
-
-
-
-  body {
-    /* height: 3000px; */
-    /* padding-top:250px; */
-    background: #0f0f0f;
-  }
-  h1 {
-    /* background: black; */
-    color: white;
-    text-align: center;
-  }
-  div.ant-itm, div.itm {
-    /* margin-top: 1000px; */
-
-  }
-
-.VRF-2{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-.VRF-2 .itm{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 60%;
-}
-
-.VRF-2 .info{
-    display: flex;
-    width: 40%;
-    text-align: left;
-}
-
-
-
-.VRF-1{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-.VRF-1 .itm-sec{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 60%;
-}
-
-.VRF-1 .info-sec{
-    /* /* display: flex; */
-    width: 40%; 
-}
-
-.VRF-1 .info-sec h1{
-    text-align: right;
-}
-
-.VR{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 100vh;
-}
-
-.VR-1, .VR-2{
-
-}
-
-.blog-footer p{
-    color: rgb(189, 189, 189);
-    font-size: 15px;
-    margin: 15px auto 15px auto;
-    padding: 10px;
-}
-
-
-
-@media screen and (max-width:470px){
-
-    .blog-footer p{
-        color: rgb(189, 189, 189);
-        font-size: 10px;
-        margin: 15px auto 15px auto;
-        padding: 10px;
-        width: 100%;
-    }
-
+    background-color: #000;
 }
