--- a/CSS/sponsor-update.css
+++ b/CSS/sponsor-update.css
@@ -114,7 +114,7 @@
     }
     
 .sponsor-button, .career-button{
-    margin: 40px 20px 0 0;
+    margin: 20px 20px 30px 0;
     padding: 15px 20px; 
     border: none; 
     border-radius: 5px; 
@@ -134,4 +134,10 @@
 }
     
     
+}
+
+@media screen and (max-width:450px){
+    .info-sponsor-button{
+        margin: 30px 0 0 0;
+    }
 }
