--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -215,13 +215,17 @@
 
 .navbar ul li{
     padding: 10px;
-    margin: 5px 3px;
+    margin: 0px 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
 .navbar ul li a{
     text-decoration: none;
     color: rgb(255, 255, 255);
+    margin: auto 0;
 }
 
 .burger{
