--- a/crowd-funding/style.css
+++ b/crowd-funding/style.css
@@ -23,10 +23,19 @@ body{
 }
 
 #home{
-    height: 90vh;
+    /* height: 90vh; */
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+#home-2{
+  /* height: 80vh; */
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
@@ -238,3 +247,5 @@ body{
     fill: #005fa4;
     font-weight: bold;
   }
+
+
