--- a/crowd-funding/app.css
+++ b/crowd-funding/app.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 @import './slabs.css';
+@import './home.css';
+
 *{
     padding: 0;
     margin: 0;
