--- a/crowd-funding/home.css
+++ b/crowd-funding/home.css
@@ -1,4 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+
 #home{
     height: 100vh;
-    
+    background-image: url(./crowd-banner.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    font-family: 'Satisfy', cursive;
+    color: rgb(255, 0, 179);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#home h1{
+    font-size: 100px;
+}
+
+#home p{
+    font-size: 40px;
 }
