--- a/crowd-funding/CSS/home.css
+++ b/crowd-funding/CSS/home.css
@@ -2,7 +2,7 @@
 
 #home{
     height: 100vh;
-    background-image: url(./Banner456.png);
+    background-image: url(../Banner456.png);
     background-repeat: no-repeat;
     background-size: cover;
 
