--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -63,26 +63,26 @@
     /* color: rgb(23, 63, 53); */
 }
 
-.footer{
+/* .footer{
     font-size: 14px;
     margin: 0 auto 30px auto;
     padding: 10px;
 
-}
+} */
 
 .mail{
      padding: 20px 0 0 0; 
      /* color: rgb(23, 63, 53); */
 }
 
-.footer{
+/* .footer{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 5vh;
     text-align: center;
     color: rgb(23, 63, 53);
-}
+} */
 
 
 
