--- a/links/style.css
+++ b/links/style.css
@@ -8,9 +8,9 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    max-height: 100vh;
+    /* max-height: 100vh; */
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: scroll;
     /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite; */
@@ -35,7 +35,7 @@ body{
 }
 
 .container{
-    min-height: 70vh;
+    /* min-height: 70vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,11 +88,7 @@ body{
     opacity: 0.7;
 }
 
-.footer{
-    width: 100%;
-    position: absolute!important;
-    bottom: 0!important;
-}
+
 
 @media screen and (max-width: 450px){
     .small{
