--- a/careers/app.css
+++ b/careers/app.css
@@ -50,6 +50,14 @@ body{
     align-items: center;
     justify-content: center;
     text-align: center;
+
+    background-image: url(../IMAGES/HOME/silhouette-confident-businesspeople.webp);
+    /* background-position: top center; */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position-y: 10vh;
+    background-position-x: center;
 }
 
 .heading img{
