--- a/careers/app.css
+++ b/careers/app.css
@@ -52,7 +52,7 @@ body{
     justify-content: center;
     text-align: center;
 
-    background-image: url(../IMAGES/HOME/silhouette-confident-businesspeople.webp);
+    /* background-image: url(../IMAGES/HOME/silhouette-confident-businesspeople.webp); */
     /* background-position: top center; */
     background-repeat: no-repeat;
     background-size: cover;
