--- a/team/app.css
+++ b/team/app.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
+@import './leadCards.css';
+@import './card.css';
+
 *{
     padding: 0;
     margin: 0;
@@ -25,6 +28,16 @@ body{
           -ms-user-select: none;
               user-select: none;
 }
+
+@keyframes fade-in-bottom {
+    0%      { transform: translate(0,25%); opacity:0; }
+    100%    { transform: translate(0,0);   opacity:1; }
+  }
+  .transitionSlideInbottom {
+    opacity: 1;
+    animation: fade-in-bottom 1s 1;
+  }
+
 
 .navbar {
     background: #000;
@@ -69,6 +82,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .heading ul li{
