--- a/team/leadCards.css
+++ b/team/leadCards.css
@@ -42,6 +42,8 @@
 .lead-card p{
     margin: 10px 0;
     font-size: 12px;
+    padding-top: 10px;
+    border-top: 2px solid pink;
 }
 
 .lead-card img{
