--- a/careers/CSS/card.css
+++ b/careers/CSS/card.css
@@ -11,7 +11,7 @@
     justify-content: center;
     text-align: center;
 
-    background-image: url(../IMAGES/CAREERS/career_back.png);
+    background-image: url(../../IMAGES/CAREERS/career_back.png);
    /* background-image: url(../IMAGES/BACKGROUD/career.png);*/
     background-attachment: fixed;
 
