--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -8,8 +8,10 @@
     overflow-y: hidden; */
     background-image: url(../IMAGES/HOME/footer.png);
     background-position: top center;
+    background-size: cover;
     background-repeat: no-repeat;
-    height: 200px;
+    height: 170px;
+    
     
 
 }
@@ -67,6 +69,8 @@
        align-items: center;
        justify-content: center;
        height: 100%;
+       font-size: 12px;
+       padding: 0 20px;
        /* background-color: rgb(146, 143, 143); */
    }
 
@@ -159,6 +163,7 @@
         width: 70%;
         font-size: 12px;
         line-height: 1.5em;
+        padding: 0 0;
     }
 
     .two ul li a{
