--- a/sponsor/CSS/intro.css
+++ b/sponsor/CSS/intro.css
@@ -27,6 +27,7 @@
     /* font-family: 'Satisfy', cursive;
     color: rgb(255, 0, 179); */
     color: rgb(23, 63, 53);
+
     
 }
 
@@ -114,6 +115,41 @@
         width: 95%;
         height: unset;
     }
+
+    #intro .intro-text h1{
+        font-size: 35px;
+        /* font-family: 'Satisfy', cursive;
+        color: rgb(255, 0, 179); */
+        color: rgb(23, 63, 53);
+        
+        
+    }
+    
+
+    #intro img{
+        height: 150px;
+    }
+
+    #intro .chart{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #intro .chart .card img{
+        height: 100px;
+    }
+
+    #intro .chart .group-one{
+        margin-top: 25px;
+        
+    }
+    
+    #intro .chart .group-two{
+        margin-bottom: 25px;
+    }
+    
     
     #intro .chart{
         width: 95%;
