--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,4 +1,3 @@
-
 .footer-image{
     /* height: 150px; */
     /* display: flex;
@@ -10,8 +9,8 @@
     background-position: top center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 170px;
-    
+    height: 170px;  
+
     
 
 }
@@ -26,6 +25,7 @@
     font-size: 14px;
     margin: 0 auto;
     padding: 10px;
+
 
     display: flex;
     flex-direction: column;
@@ -47,12 +47,13 @@
 }
 
   .content{
+     
       width: 100%;
       /* height: 30vh; */
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 1px solid red;
+    /* margin: 1px solid red; */
 
    }
    
@@ -146,6 +147,7 @@
 
 
 @media screen and (max-width:594px) {
+
    
     .map{
         display: none;
@@ -176,7 +178,7 @@
     
     }
 }
-    
+   
 @media screen and (max-width:360px) {
 
     .footer{
