--- a/sponsor/CSS/how.css
+++ b/sponsor/CSS/how.css
@@ -30,11 +30,13 @@
     /* font-family: 'Satisfy', cursive;
     color: rgb(255, 0, 179); */
     color: rgb(23, 63, 53);
+    /* text-align: center; */
 }
 
 #how .intro-text p{
     font-size: 18px;
     padding: 15px 25px;
+    text-align: center;
 }
 
 #how img{
@@ -104,6 +106,7 @@
 #how .chart .card h4{
     text-align: left;
     margin: 10px 0;
+    padding: 0px 15px;
 }
 
 #how .chart .card p{
@@ -135,6 +138,67 @@
         height: unset;
     }
     
+    #how .chart{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+        width: 100%;
+    
+    }
+    
+    #how .chart .card{
+        height: 200px;
+        width: 100%;
+        margin: 15px 0;
+        background-color: rgb(241, 241, 241);
+        box-shadow: 5px 5px 5px rgba(134, 134, 134, 0.6);
+        transition: .2s ease-in-out 0s;
+        border-radius: 10px;
+
+        display: flex;
+    }
+
+    #how .card-image{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        width: 50%;
+    }
+
+    #how .chart .card img{
+        height: 100px;
+    }
+
+    #how .intro-text p{
+        font-size: 18px;
+        padding: 15px 0px;
+        text-align: center;
+    }
+    
+
+    
+    
+    #how .chart .group-one{
+        /* margin-top: 25px; */
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        margin-right: 0px;
+    }
+    
+    #how .chart .group-two{
+        /* margin-bottom: 25px; */
+      
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        margin-left: 0px;
+    }
+    
+
     #how .chart{
         width: 95%;
         margin: 0 auto;
