--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -5,7 +5,7 @@
     justify-content: center; */
     /* overflow-x: hidden;
     overflow-y: hidden; */
-    background-image: url(../IMAGES/HOME/footer.png);
+    background-image: url(../IMAGES/HOME/footer_2.png);
     background-position: top center;
     background-size: cover;
     background-repeat: no-repeat;
