--- a/sponsor/CSS/how.css
+++ b/sponsor/CSS/how.css
@@ -30,7 +30,7 @@
     /* font-family: 'Satisfy', cursive;
     color: rgb(255, 0, 179); */
     color: rgb(23, 63, 53);
-    /* text-align: center; */
+    text-align: center;
 }
 
 #how .intro-text p{
@@ -51,6 +51,34 @@
 
 }
 
+#how .chart .card{
+    height: 200px;
+    width: 400px;
+    margin: 15px;
+    /* background-color: rgb(241, 241, 241); */
+    box-shadow: 5px 5px 5px rgba(134, 134, 134, 0.6);
+    transition: .2s ease-in-out 0s;
+    border-radius: 10px;    
+    display: flex;
+
+    background-image: url(../../IMAGES/sponsorPage/back-card.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#how .card-image{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 50%;
+}
+
+#how .chart .card img{
+    height: 130px;
+}
+
 #how .chart .group-one{
     /* margin-top: 25px; */
     display: flex;
@@ -67,28 +95,6 @@
 }
 
 
-#how .chart .card{
-    height: 200px;
-    width: 400px;
-    margin: 15px;
-    background-color: rgb(241, 241, 241);
-    box-shadow: 5px 5px 5px rgba(134, 134, 134, 0.6);
-    transition: .2s ease-in-out 0s;
-    border-radius: 10px;
-
-    display: flex;
-}
-
-#how .card-image{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-
-#how .chart .card img{
-    height: 130px;
-}
 
 
 #how .chart .card:hover{
@@ -101,6 +107,7 @@
     flex-direction: column;
     /* align-items: center; */
     justify-content: center;
+    width: 60%;
 }
 
 #how .chart .card h4{
@@ -116,7 +123,7 @@
 
 
 
-@media screen and (max-width:450px){
+@media screen and (max-width:550px){
     #how{
         height: unset;
         display: flex;
@@ -169,7 +176,7 @@
     }
 
     #how .chart .card img{
-        height: 100px;
+        height: 125px;
     }
 
     #how .intro-text p{
