--- a/CSS/app.css
+++ b/CSS/app.css
@@ -57,6 +57,14 @@ body{
 
 
 
+#cars{
+  background-image: url(../IMAGES/CARS/cars-back-3.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+
 
 
 @keyframes fade-in-left {
