--- a/CSS/podcast.css
+++ b/CSS/podcast.css
@@ -1,4 +1,12 @@
 
+#podcast{
+    background-image: url(../IMAGES/podcast/podcast-back.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    color: #fff;
+}
+
 .podcast-heading-box{
     min-height: 100vh;
     display: flex;
@@ -8,6 +16,7 @@
     justify-content: center;
     text-align: center;
     overflow-x: hidden;
+    
 }
 
 .podcast-heading-box .podcast-heading{
