--- a/CSS/podcast.css
+++ b/CSS/podcast.css
@@ -1,6 +1,6 @@
 
 #podcast{
-    background-image: url(../IMAGES/podcast/podcast-back.png);
+    background-image: url(../IMAGES/podcast/podcast-back.webp);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
