--- a/CSS/app.css
+++ b/CSS/app.css
@@ -57,12 +57,12 @@ body{
 
 
 
-/* #cars{
+#cars{
   background-image: url(../IMAGES/CARS/cars-back-3.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-} */
+}
 
 
 
