--- a/CSS/app.css
+++ b/CSS/app.css
@@ -57,13 +57,13 @@ body{
 
 
 
-#cars{
+/* #cars{
   background-image: url(../IMAGES/CARS/cars-back-3.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
-
+ */
 
 
 
