--- a/CSS/cars-update.css
+++ b/CSS/cars-update.css
@@ -30,15 +30,56 @@
     }
   }
 
+.vrf2-img{
+    height: 150px;
+}
+
+.vrf-position{
+    height: 60px;
+    margin-bottom: 30px;
+}
+
+.wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.car-button {
+    margin: 15px 0 0 0!important;
+    padding: 15px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    background-color: #1abc9c; 
+    color: #fff; 
+    font-size: 18px; 
+    outline: none; 
+    cursor: pointer; 
+    /* We need this to position 
+        span inside button */ 
+    /* position: relative;  */
+    overflow: hidden; 
+    box-shadow: 6px 7px 40px -4px  
+             rgba(0, 0, 0, 0.2); 
+    text-decoration: none;
+}
+
 
 .car-one{
     display: flex;
     align-items: center;
-    width: 75%;
-    justify-content: space-between;
+    width: 90%;
+    justify-content: space-around;
 }
+
+.car-one .wrapper{
+    height: 100%;
+
+}
+
 .car-one .car-image{
-    width: 70%;
+    width: 50%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -49,7 +90,7 @@
 }
 
 #extra{
-    text-align: left;
+    text-align: center;
 }
 
 .car-one .car-info{
@@ -83,10 +124,15 @@
 
 
 
-
+.car-two{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 .car-two .car-image{
-    width: 70%;
+    width: 55%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -248,6 +294,17 @@
         padding: 10px;
     }
 
+    .vrf2-img{
+        height: 100px;
+        margin-top: 20px;
+    }
+    
+    .vrf-position{
+        height: 40px;
+        margin-bottom: 20px;
+    }
+    
+
     
 
     .car-one .car-image{
@@ -275,9 +332,11 @@
     
     .car-one .wrapper{
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
+
     }
     .car-one .car-name{
         font-size: 25px;
