--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -48,6 +48,19 @@
     position: relative;
     display: inline-block;
 }
+
+.dropdown-content:after {
+    content: " ";
+    position: absolute;
+    left: 30px;
+    top: -10px;
+    border-top: none;
+    border-right: 15px solid transparent;
+    border-left: 15px solid transparent;
+    border-bottom: 15px solid #f1f1f1;
+  }
+  
+
   
 .dropdown-content {
     display: none;
