--- a/cars/VRF2/CSS/app.css
+++ b/cars/VRF2/CSS/app.css
@@ -2,6 +2,7 @@
 
 
 @import './home.css';
+@import './table.css';
 
 
 
@@ -45,33 +46,26 @@ body{
     width: 50%;
 }
 
-
-#VRF2 {
-    border-collapse: collapse;
-    width: 100%;
-    
-  }
-  
-  #VRF2 td, #VRF2 th {
-    /* border: 1px solid #ddd; */
-    border: none;
-    padding: 8px;
-  }
-  
-  #VRF2 tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #VRF2 tr:hover {background-color: #ddd;}
-  
-  #VRF2 th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
-  }
-
-
 #home .model-name{
     height: 170px;
 }
 
+#home .model-sub-heading{
+    height: 60px;
+    padding: 20px 0 0 0;
+}
+
+.info img{
+    height: 400px;
+}
+
+@media screen and (max-width:450px) {
+
+    .info{
+        width: 100%;
+    }
+    .info img{
+        height: 250px;
+    }
+    
+}
