--- a/CSS/podcast.css
+++ b/CSS/podcast.css
@@ -141,6 +141,10 @@
 @media screen and (max-width:768px){
 
 
+    #podcast{
+        background-image: unset;
+    }
+
     .google-form {
         height: 100%;
         width: 100%;
