--- a/CSS/podcast.css
+++ b/CSS/podcast.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    /* color: #fff; */
+    color: #fff;
 }
 
 .podcast-heading-box{
@@ -143,6 +143,7 @@
 
     #podcast{
         background-image: unset;
+        color: unset;
     }
 
     .google-form {
