--- a/sponsor/CSS/app.css
+++ b/sponsor/CSS/app.css
@@ -4,9 +4,7 @@
 @import './home.css';
 @import './intro.css';
 @import './how.css';
-@import './funds.css';
-@import './contributors.css';
-
+@import './brochure.css';
 
 
 
@@ -38,3 +36,23 @@ body{
     background: #000;
 }
 
+
+.brochure-button{
+    text-decoration: none;
+    margin: 40px 25px 0 0;
+    padding: 15px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    background-color: #1abc9c; 
+    color: #fff; 
+    font-size: 18px; 
+    outline: none; 
+    cursor: pointer; 
+
+    /* We need this to position 
+        span inside button */ 
+    position: relative; 
+    overflow: hidden; 
+    box-shadow: 6px 7px 40px -4px  
+             rgba(0, 0, 0, 0.2); 
+}
