--- a/CSS/sponsor-update.css
+++ b/CSS/sponsor-update.css
@@ -1,4 +1,3 @@
-
 .sponsor-heading-box{
     min-height: 100vh;
     display: flex;
@@ -33,6 +32,10 @@
     text-align: left;
 }
 
+.info-sponsor-button{
+    margin: 40px 0 0 0;
+}
+
 .sponsor-heading-box .sponsor-image{
     width: 50%;
     overflow-x: hidden;
@@ -45,6 +48,7 @@
 
 
 .sponsor-button { 
+    text-decoration: none;
     margin: 40px 25px 0 0;
     padding: 15px 20px; 
     border: none; 
@@ -138,6 +142,6 @@
 
 @media screen and (max-width:450px){
     .info-sponsor-button{
-        margin: 30px 0 0 0;
+        margin: 30px 0 30px 0;
     }
 }
