--- a/CSS/joinus.css
+++ b/CSS/joinus.css
@@ -116,5 +116,13 @@
         height: 300px;
     }
     
+
+    .career-joinus-heading-box .career-joinus-heading .info-career-joinus-button{
+        /* margin-top: 30px;
+        margin-left: 50px; */
+        /* font-size: 16px; */
+        margin: 0px auto;
+    }
+    
     
 }
