--- a/crowdfunding/CSS/app.css
+++ b/crowdfunding/CSS/app.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+
 @import './stats.css';
 @import './slabs.css';
 @import './home.css';
