--- a/CSS/joinus.css
+++ b/CSS/joinus.css
@@ -121,6 +121,7 @@
         /* margin-top: 30px;
         margin-left: 50px; */
         /* font-size: 16px; */
+        width: 100%;
         margin: 0px 0 20px 0;
     }
     
