--- a/CSS/app.css
+++ b/CSS/app.css
@@ -72,8 +72,8 @@ form input{
 
 
 
-#cars .swiper-container{
-  background-image: url(../IMAGES/HOME/);
+#cars{
+  background-image: url(../IMAGES/BACKGROUD/4877010.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
