--- a/CSS/app.css
+++ b/CSS/app.css
@@ -73,7 +73,7 @@ form input{
 
 
 #cars{
-  background-image: url(../IMAGES/BACKGROUD/4877010.webp);
+  /* background-image: url(../IMAGES/BACKGROUD/4877010.webp); */
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
