--- a/CSS/about.css
+++ b/CSS/about.css
@@ -39,9 +39,9 @@
 
 .about .about-content{
     padding: 10px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500;
-    text-align: center;
+    text-align: left;
     margin: 20px 0 0 40px;
     line-height: 1.5em;
 }
