--- a/CSS/cars-update.css
+++ b/CSS/cars-update.css
@@ -1,7 +1,7 @@
 /* swiper */
 #cars .swiper-container {
     width: 100%;
-    height: 70vh;
+    height: 80vh;
   }
   
 #cars .swiper-slide {
@@ -26,7 +26,7 @@
   
   @media screen and (max-width:450px){
     #cars .swiper-container {
-      height: 75vh;
+      height: 80vh;
     }
   }
 
@@ -79,10 +79,10 @@
 }
 
 .car-one .car-image{
-    width: 50%;
+    width: 30%;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .car-one .car-image img{
@@ -282,6 +282,11 @@
  
 
 @media screen and (max-width:768px){
+
+    .car-btn{
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
 
     .slideshow-container-new{
         height: 450px;
