--- a/CSS/cars.css
+++ b/CSS/cars.css
@@ -1,5 +1,5 @@
 #cars{
-    min-height: 100vh;
+    /* min-height: 100vh; */
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
