--- a/CSS/imagesections.css
+++ b/CSS/imagesections.css
@@ -7,13 +7,24 @@
     background-attachment: fixed;
     background-image: url(../IMAGES/BACKGROUD/IMG_2118.webp);
   }
-  
-  .static-career .cover{
+    
+ 
+  .static-career .cover-2{
     height: 100%;
     width: 50%;
-    /* background-color: rgba(255, 255, 255, 0.863); */
-    background-image: url(../IMAGES/BACKGROUD//4877010.webp);
-    opacity: .94;
+    background-image: url(../IMAGES/BACKGROUD/IMG_21182.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+  }
+
+  .static-career .cover-1{
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.863);
+    /* background-image: url(../IMAGES/BACKGROUD//4877010.webp); */
+    opacity: .95;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -22,7 +33,17 @@
     align-items: center;
     justify-content: center;
   }
-  
+
+  .static-career .cover{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+  }
+
   .static-career .cover h4{
     padding: 0 5%;
     font-size: 4em;
@@ -41,6 +62,16 @@
     color: rgb(0, 76, 121);
     font-family: 'Montserrat', sans-serif;
   }
+
+
+
+  
+
+
+
+
+
+
   
   .static-sponsor{
     height: 100vh;
@@ -99,7 +130,7 @@
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    background-image: url(../IMAGES/BACKGROUD/engine.jpg);
+    background-image: url(../IMAGES/BACKGROUD/Web\ 1280\ –\ 1.webp);
   }
   
   .static-car .cover{
@@ -113,6 +144,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -144,7 +176,11 @@
     font-size: 1.3em;
     font-weight: 500;
   }
- 
+
+  .static-car .make-name{
+    font-size: .3em;
+    display: none;
+  } 
 
 @media screen and (max-width:450px) {
     .static-career{
@@ -167,6 +203,11 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+      }
+
+      .static-career .cover-2{
+        height: 100%;
+        width: 100%;
       }
 
       .static-sponsor{
@@ -207,6 +248,9 @@
         font-size: .8em;
       }
 
+      .static-car .cover h4{
+        font-size: 6em;
+      }
       
 }
 
