--- a/CSS/team-update.css
+++ b/CSS/team-update.css
@@ -127,6 +127,7 @@
     
     .team-heading-box .team-image img{
         margin-top: 50px;
+        margin-bottom: 50px;
         height: 250px;
     }
     
@@ -138,7 +139,7 @@
         margin-bottom: 0px;
     }
     .team-heading-box{
-        margin-top: 50px;
+        margin-top: 100px;
     }
     .team-heading-box .team-heading .info-team p{
         margin-left: unset;
